roles/system/traefik-ext/files/ingress/ingress-traefik.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-traefik

spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`sysop.mccannclan.family`) && PathPrefix(`/ingress`)
    kind: Rule
    services:
    - name: api@internal
    middlewares:
    - https-only
    - chain-authelia
  #  - chain-basic-auth
  #  - chain-no-auth
  tls:
    store:
      name: default
